# AstronomySim

./: .gitignore  CMakeLists.txt  README.md  app.c  app.h  build_linux.sh  build_mac.sh  build_win32.bat  camera.h  default_render.h  dm_intrinsics.h  gravity.h  main.c  post_build_linux.sh  post_build_mac.sh  post_build_win32.bat  project.4coder  run.bat
app/: app.c  app.h  app_defines.h  barnes_hut.h  basic_scene.h  camera.c  camera.h  components.c  components.h  compute_test.c  debug_render.c  debug_render.h  default_render.c  default_render.h  gravity.c  gravity.h  metal_testing.h  new_stress_test.h  octree.c  octree.h  physics.c  physics.h  physics_test.c  physics_test.h  ray_trace.c  ray_trace.h  raytrace_app.c  render_test.c  simulation_defines.h  space_sim.c  space_sim.h  stress_test.c  stress_test.h
assets/models/: Planet_10.glb  Planet_11.glb  Planet_12.glb  Planet_14.glb  Planet_15.glb  Planet_17.glb  Planet_18.glb  Planet_19.glb  Planet_2.glb  Planet_20.glb  Planet_21.glb  Planet_22.glb  Planet_23.glb  Planet_24.glb  Planet_25.glb  Planet_26.glb  Planet_27.glb  Planet_29.glb  Planet_3.glb  Planet_30.glb  Planet_31.glb  Planet_32.glb  Planet_33.glb  Planet_34.glb  Planet_35.glb  Planet_36.glb  Planet_37.glb  Planet_38.glb  Planet_4.glb  Planet_41.glb  Planet_42.glb  Planet_43.glb  Planet_44.glb  Planet_45.glb  Planet_46.glb  Planet_47.glb  Planet_49.glb  Planet_5.glb  Planet_50.glb  Planet_6.glb  (+5 more)
assets/shaders/: airy_blur_pixel.hlsl  airy_blur_vertex.hlsl  airy_point.metal  airy_point_pixel.glsl  airy_point_pixel.hlsl  airy_point_vertex.glsl  airy_point_vertex.hlsl  blackbody.metal  blackbody_pixel.glsl  blackbody_pixel.hlsl  blackbody_vertex.glsl  blackbody_vertex.hlsl  debug.metal  debug_vertex.glsl  dx12_pixel.hlsl  dx12_vertex.hlsl  gravity_compute.hlsl  gravity_compute.metal  imgui.metal  imgui_pixel.hlsl  light_src.metal  light_src_pixel.glsl  light_src_pixel.hlsl  light_src_vertex.glsl  light_src_vertex.hlsl  persp.metal  persp_pixel.glsl  persp_pixel.hlsl  persp_vertex.glsl  persp_vertex.hlsl  physics_compute.hlsl  physics_compute.metal  quad.metal  quad_pixel.glsl  quad_pixel.hlsl  quad_vertex.glsl  quad_vertex.hlsl  test.metal  test_compute.hlsl  test_compute.metal  (+4 more)
rendering/: debug_render_pass.c  debug_render_pass.h  imgui_render_pass.c  imgui_render_pass.h  render_pass.c  render_pass.h
systems/: blackbody_pass.h  default_pass.c  default_pass.h  floating_origin.h  gravity.c  gravity.h  gravity_system.c  gravity_system.h  light_src_pass.c  light_src_pass.h  physics_system.c  physics_system.h  physics_system_multi_th.c
